--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -31,6 +31,36 @@
     animation: gradient 15s ease infinite;
     cursor: pointer;
 }
+.home-container .brands {
+    margin: 0 auto;
+    padding: 24px 16px;
+    max-width: calc(350px + 32px);
+}
+.home-container .brands__header {
+    margin-bottom: 16px;
+}
+.home-container .brands__header > h2 {
+    font-size: 1.75rem;
+}
+.home-container .brands__list .swiper-pagination-bullet-active {
+    background-color: #fff;
+}
+.home-container .brands__list .brand-card {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    font-size: 1.375rem;
+    letter-spacing: 5px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #fff;
+    /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    cursor: pointer;
+}
 .home-container .products {
     margin: 0 auto;
     padding: 24px 16px;
@@ -75,6 +105,13 @@
     .home-container .categories__list .category-card {
         height: 200px;
    }
+   .home-container .brands {
+    max-width: calc(700px + 72px);
+    padding: 36px 24px;
+}
+   .home-container .brands__list .brand-card {
+    width: 200px;
+}
     .home-container .products {
         max-width: calc(700px + 72px);
         padding: 36px 24px;
@@ -97,6 +134,13 @@
     .home-container .categories__list .category-card {
         width: 348px;
    }
+   .home-container .brands {
+    max-width: calc(1050px + 96px);
+    padding: 36px 24px;
+}
+.home-container .brands__list .brand-card {
+    width: 348px;
+}
     .home-container .products {
         max-width: calc(1050px + 96px);
         padding: 36px 24px;
