--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,52 +1,6 @@
-.home-container {
-    padding-top: 24px;
-}
-.home-container .categories {
-    margin: 0 auto;
-    padding: 24px 16px;
-    max-width: calc(350px + 32px);
-}
-.home-container .categories__header {
-    margin-bottom: 16px;
-}
-.home-container .categories__header > h2 {
-    font-size: 1.75rem;
-}
-.home-container .categories__list .swiper-pagination-bullet-active {
-    background-color: #fff;
-}
-.home-container .categories__list .category-card {
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 3px;
-    font-size: 1.375rem;
-    letter-spacing: 5px;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: #fff;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-    cursor: pointer;
-}
-.home-container .brands {
-    margin: 0 auto;
-    padding: 24px 16px;
-    max-width: calc(350px + 32px);
-}
-.home-container .brands__header {
-    margin-bottom: 16px;
-}
-.home-container .brands__header > h2 {
-    font-size: 1.75rem;
-}
-.home-container .brands__list .swiper-pagination-bullet-active {
-    background-color: #fff;
-}
-.home-container .brands__list .brand-card {
-    height: 150px;
+
+.brand-card {
+    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,38 +15,38 @@
     animation: gradient 15s ease infinite;
     cursor: pointer;
 }
-.home-container .products {
+ .products {
     margin: 0 auto;
     padding: 24px 16px;
     max-width: calc(350px + 32px);
 }
-.home-container .products__loading {
+ .products__loading {
     text-align: center;
 }
-.home-container .products__header {
+ .products__header {
     margin-bottom: 16px;
 }
-.home-container .products__header > h2 {
+ .products__header > h2 {
     font-size: 1.75rem;
 }
-.home-container .products__list {
+ .products__list {
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 24px;
 }
-.home-container .products__list .product-card {
+ .products__list .product-card {
     height: 100%;
     max-width: 350px;
     margin: 0 auto;
 }
-.home-container .products__list .product-card__image {
+ .products__list .product-card__image {
     cursor: pointer;
 }
-.home-container .load-products {
+ .load-products {
     text-align: center;
     padding: 16px 16px 32px;
 }
-.home-container .load-products > button {
+ .load-products > button {
     max-width: 341px;
     height: 44px;
     width: 100%;
