--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,42 +1,54 @@
-<div class="home-container">
-    <!-- <div class="categories">
-      <div class="categories__header">
-        <h2>Categories</h2>
-      </div>
-      <div class="categories__list">
-        <swiper
-          [zoom]="false"
-          [slidesPerView]="screenWidth > 1200 ? 1 : 1"
-          [spaceBetween]="50"
-          [pagination]="true"
-          [loop]="true"
-        >
-          <ng-template swiperSlide *ngFor="let c of categories">
-            <div class="category-card">{{ c.name }}</div>
-          </ng-template>
-        </swiper>
-      </div>
-    </div> -->
-    <div class="brands">
-      <div class="brands__header">
-        <h2 routerLink="/sellers">Brands</h2>
-      </div>
-      <div class="brands__list">
-        <swiper
-          [zoom]="false"
-          [slidesPerView]="screenWidth > 1200 ? 3 : 1"
-          [spaceBetween]="50"
-          [pagination]="true"
-          [loop]="true"
-        >
-          <ng-template swiperSlide *ngFor="let b of brands">
-            <div class="brand-card">
-              <img src="../assets/{{ b.image }}"  class="img-fluid rounded" routerLink="/seller/{{ b.id }}">
-            </div>
-          </ng-template>
-        </swiper>
-      </div>
+ <!-- Content Header (Page header) -->
+ <div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h1 class="m-0">Featured Home</h1>
+      </div><!-- /.col -->
+      <div class="col-sm-6">
+        <ol class="breadcrumb float-sm-right">
+          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item active">Featured Home</li>
+        </ol>
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+<!-- /.content-header -->
+<div class="content">
+<div class="container-fluid">
+
+
+  <div class="card">
+    <div class="card-header">
+      <h2 class="card-title"  routerLink="/sellers" >Brands</h2>
     </div>
+    <!-- /.card-header -->
+    <div class="card-body">
+      <swiper
+      [zoom]="false"
+      [slidesPerView]="screenWidth > 1200 ? 4 : 1"
+      [spaceBetween]="50"
+      [pagination]="true"
+      [loop]="true"
+      [allowSlidePrev]="true"
+    >
+      <ng-template swiperSlide *ngFor="let b of brands">
+        <div class="brand-card">
+          <img src="../assets/{{ b.image }}"  class="img-thumbnail" routerLink="/seller/{{ b.id }}">
+        </div>
+      </ng-template>
+    </swiper>
+    </div>
+    <!-- /.card-body -->
+  </div>
+
+
+
+
+
+
+    
     <div class="products">
       <div class="products__header">
         <h2>New Products</h2>
@@ -76,4 +88,4 @@
       </button>
     </div>
   </div>
-  
+</div><!--content div ends here-->
