--- a/src/app/product-card/product-card.component.css
+++ b/src/app/product-card/product-card.component.css
@@ -5,6 +5,7 @@
     border-radius: 3px;
     transition: all 0.2s;
     overflow: hidden;
+    max-height:550px;
 }
 .product-card__image > img {
     width: 100%;
@@ -28,9 +29,22 @@
     font-weight: 500;
     text-transform: uppercase;
     margin-bottom: 4px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+            line-clamp: 2; 
+    -webkit-box-orient: vertical;
+    min-height:55px;
 }
 .product-card__info > header .title .product-short-desc {
     color: #777;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4; /* number of lines to show */
+            line-clamp: 4; 
+    -webkit-box-orient: vertical;
 }
 .product-card__info > header .product-price {
     font-size: 1.375rem;
