--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,25 @@
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h1 class="m-0"  style="text-transform: capitalize;">{{ product.title }}</h1>
+      </div><!-- /.col -->
+      <div class="col-sm-6">
+        <ol class="breadcrumb float-sm-right">
+          <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+          <li class="breadcrumb-item"><a >Products</a></li>
+          <li class="breadcrumb-item active">{{ product.title }}</li>
+        </ol>
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+<!-- /.content-header -->
+
+<!-- Main content -->
+<div class="content">
+<div class="container-fluid">
+
 <div class="product-container" *ngIf="!loading">
     <div>
       <div class="product-container__image">
@@ -31,7 +53,7 @@
         </swiper>
       </div>
       <div class="product-container__details">
-        <h2 class="title">{{ product.name }}</h2>
+        <h2 class="title">{{ product.title }}</h2>
         <div class="reviews">
           <div class="rating">
             <i nz-icon nzType="star" nzTheme="fill"></i>
@@ -40,13 +62,11 @@
             <i nz-icon nzType="star" nzTheme="fill"></i>
             <i nz-icon nzType="star"></i>
           </div>
-          <span class="review-link"
-            >10 Review(s) |
-            <span style="cursor: pointer">Add your review</span></span
-          >
+          <!-- <span class="review-link">10 Review(s) |
+            <span style="cursor: pointer">Add your review</span></span> -->
         </div>
         <div class="price-container">
-          <h2 class="price">{{ product.price | currency: "INR" }}</h2>
+          <h2 class="price">{{ product.price | currency: "INR" }}  / ft<sup>2</sup></h2>
           <span
             class="availability"
             [ngStyle]="{ color: quantity > 0 ? 'inherit' : 'red' }"
@@ -73,18 +93,20 @@
             </button>
           </div>
           <div class="category">
-            <span>Category: </span> {{ product.category }}
+            <span>Category: </span> <span class="text-info">Electric Hamam / Electric Under-Floor Heating / Radiant Floor Heating</span>
           </div>
-          <div class="social-links">
+          <!-- <div class="social-links">
             <span>Share: </span>
             <i nz-icon nzType="facebook" nzTheme="outline"></i>
             <i nz-icon nzType="twitter" nzTheme="outline"></i>
             <i nz-icon nzType="google-plus" nzTheme="outline"></i>
             <i nz-icon nzType="mail" nzTheme="outline"></i>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
     <div class="additional"></div>
   </div>
   
+</div>
+</div>
