--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -20,11 +20,11 @@
   <div class="container-fluid">
 
 
-<div class="cart-container">
-    <div class="cart-container__empty" *ngIf="cartData.products.length === 0">
+<div class="cart-container card">
+    <div class="cart-container__empty card-body" *ngIf="cartData.products.length === 0">
       Your cart is empty.
     </div>
-    <div class="cart-container__list" *ngIf="cartData.products.length > 0">
+    <div class="cart-container__list " *ngIf="cartData.products.length > 0">
       <header class="list-header">
         <h2>Cart</h2>
       </header>
@@ -41,15 +41,18 @@
         </div>
         <div class="list-item__details">
           <div class="title">{{ product.title }}</div>
-          <div class="price">{{ product.price | currency: "USD" }}</div>
-          <div class="cta">
-            <nz-input-number
+          <div class="price">{{ product.price | currency: "INR" }}</div>
+          <div class="cta form-group row">
+            <!-- <nz-input-number
               [(ngModel)]="product.quantity"
               [nzMin]="product.maxQuantity > 0 ? 1 : 0"
               [nzMax]="product.maxQuantity > 0 ? product.maxQuantity : 0"
               [nzStep]="1"
               (ngModelChange)="updateCart(product.id, product.quantity)"
-            ></nz-input-number>
+            ></nz-input-number> -->
+            
+            <input type="number" class="form-control col-10"  [(ngModel)]="product.quantity"  (ngModelChange)="updateCart(product.id, product.quantity)" >
+            <span class="text-info col-2"> ft<sup>2</sup></span>
           </div>
         </div>
       </div>
